# energy

./: ASSUMPTIONS.md  Dockerfile  Dockerfile_0  docker-compose.yml  pyproject.toml  requirements.txt
app/: _main_0.py  main.py
energy_pred/: __init__.py  data_loader.py  forecasting.py  metrics.py
notebooks/: forecast_experiments.ipynb  forecast_experiments2.ipynb  inference_exp.ipynb  inference_exp2.ipynb  loader_experiments.ipynb
server/: run_flask.py
tests/: test_data_loader.py
