[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "energy_pred"
version = "0.1.0"
description = "Simple time series forecasting baselines"
authors = [ {name = "Your Name", email = "you@example.com"} ]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.22",
    "pandas>=1.5",
    "matplotlib>=3.7"
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["energy_pred"]
